--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="HypeX demo"
-      content="HypeX demo"
+      name="HypeX"
+      content="Metaverse for Sneaker Lovers. Hypex will serve as a bridge between the real world and the virtual world.  Each NFT in HypeX will have a physical object in the real world. We will increase the liquidity of the transactions through fractionalized NFT and mortgage lending, thus creating a sustainable Hypeverse ecosystem."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
